--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="menu_settings">Settings</string>
     <string name="title_activity_mex">Mex</string>
     <string name="title_activity_contact">Contacts</string>
+    <string name="title_activity_contact_details_fragment">Details</string>
 
 </resources>
